Fixed button sizing on mobile again

--- a/CSS/solution.css
+++ b/CSS/solution.css
@@ -239,48 +239,15 @@ footer {
   }
   #nav-list a {
     padding-block: 0.5rem;
-    padding-inline: 1rem;
+    padding-inline: 0.5rem;
     background-color: lightslategray;
     border: solid 1px black;
     border-radius: 1rem;
-  }
-
-  #nav-list li:last-child a {
-    border: none;
-  }
-  li:last-child {
-    display: flex;
-    background-color: lightslategray;
-    border: solid 1px black;
-    border-radius: 1rem;
-    align-items: center;
-    justify-content: center;
-  }
-
-  #nav-list li:first-child a {
-    border: none;
-  }
-
-  li:first-child {
-    display: flex;
-    background-color: lightslategray;
-    border: solid 1px black;
-    border-radius: 1rem;
-    align-items: center;
-    justify-content: center;
-  }
-
-  #current {
-    display: flex;
-    background-color: black;
-    border: solid 1px lightslategray;
-    border-radius: 1rem;
-    align-items: center;
-    justify-content: center;
   }
 
   #current a {
     background-color: black;
+    border-radius: 1rem;
     border: solid 1px lightslategray;
   }
 
